--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Homework Planner</title>
+    <title>CC's Homework Planner</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
     </div>
     <div class="addshit glass">
         <div class="titles">
-            <h2>Advanced Homework Planner 📝</h2>
-            <h3 id="subtitle">Fuck you calendar apps! I ain't givin you a penny!</h3>
+            <h2>CC's Homework Planner 📝</h2>
+            <h3 id="subtitle">Frick you calendar apps! I ain't givin you a penny!</h3>
         </div>
         <form id="homeworkForm" class="mainform">
             <label for="dateGiven">Date Given:</label>
