--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="addshit glass">
         <div class="titles">
-            <h2>CC's Homework Planner 📝</h2>
+            <h2>CloudCompile's Homework Planner 📝</h2>
             <h3 id="subtitle">Frick you calendar apps! I ain't givin you a penny!</h3>
         </div>
         <form id="homeworkForm" class="mainform">
